@@ -1,6 +1,6 @@
 /* Multi-process control for GDB, the GNU debugger.
 
-   Copyright (C) 2008-2013 Free Software Foundation, Inc.
+   Copyright (C) 2008, 2009, 2010 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -22,7 +22,6 @@
 #include "inferior.h"
 #include "target.h"
 #include "command.h"
-#include "completer.h"
 #include "gdbcmd.h"
 #include "gdbthread.h"
 #include "ui-out.h"
@@ -31,17 +30,11 @@
 #include "gdbcore.h"
 #include "symfile.h"
 #include "environ.h"
-#include "cli/cli-utils.h"
-#include "continuations.h"
-#include "arch-utils.h"
-#include "target-descriptions.h"
 
 void _initialize_inferiors (void);
 
-/* Keep a registry of per-inferior data-pointers required by other GDB
-   modules.  */
-
-DEFINE_REGISTRY (inferior, REGISTRY_ACCESS_FIELD)
+static void inferior_alloc_data (struct inferior *inf);
+static void inferior_free_data (struct inferior *inf);
 
 struct inferior *inferior_list = NULL;
 static int highest_inferior_num;
@@ -100,7 +93,6 @@ free_inferior (struct inferior *inf)
   xfree (inf->args);
   xfree (inf->terminal);
   free_environ (inf->environment);
-  target_desc_info_free (inf->tdesc_info);
   xfree (inf->private);
   xfree (inf);
 }
@@ -132,7 +124,7 @@ add_inferior_silent (int pid)
   memset (inf, 0, sizeof (*inf));
   inf->pid = pid;
 
-  inf->control.stop_soon = NO_STOP_QUIETLY;
+  inf->stop_soon = NO_STOP_QUIETLY;
 
   inf->num = ++highest_inferior_num;
   inf->next = inferior_list;
@@ -182,6 +174,25 @@ delete_thread_of_inferior (struct thread_info *tp, void *data)
     }
 
   return 0;
+}
+
+void
+delete_threads_of_inferior (int pid)
+{
+  struct inferior *inf;
+  struct delete_thread_of_inferior_arg arg;
+
+  for (inf = inferior_list; inf; inf = inf->next)
+    if (inf->pid == pid)
+      break;
+
+  if (!inf)
+    return;
+
+  arg.pid = pid;
+  arg.silent = 1;
+
+  iterate_over_threads (delete_thread_of_inferior, &arg);
 }
 
 /* If SILENT then be quiet -- don't announce a inferior death, or the
@@ -263,21 +274,11 @@ exit_inferior_1 (struct inferior *inftoex, int silent)
   observer_notify_inferior_exit (inf);
 
   inf->pid = 0;
-  inf->fake_pid_p = 0;
   if (inf->vfork_parent != NULL)
     {
       inf->vfork_parent->vfork_child = NULL;
       inf->vfork_parent = NULL;
     }
-  if (inf->vfork_child != NULL)
-    {
-      inf->vfork_child->vfork_parent = NULL;
-      inf->vfork_child = NULL;
-    }
-
-  inf->has_exit_code = 0;
-  inf->exit_code = 0;
-  inf->pending_detach = 0;
 }
 
 void
@@ -460,19 +461,16 @@ have_inferiors (void)
 int
 have_live_inferiors (void)
 {
-  struct inferior *inf;
+  struct target_ops *t;
 
-  for (inf = inferior_list; inf; inf = inf->next)
-    if (inf->pid != 0)
-      {
-	struct thread_info *tp;
-	
-	tp = any_thread_of_process (inf->pid);
-	if (tp && target_has_execution_1 (tp->ptid))
-	  break;
-      }
+  /* The check on stratum suffices, as GDB doesn't currently support
+     multiple target interfaces.  */
+  if (have_inferiors ())
+    for (t = current_target.beneath; t != NULL; t = t->beneath)
+      if (t->to_stratum == process_stratum)
+	return 1;
 
-  return inf != NULL;
+  return 0;
 }
 
 /* Prune away automatically added program spaces that aren't required
@@ -519,27 +517,13 @@ number_of_inferiors (void)
   return count;
 }
 
-/* Converts an inferior process id to a string.  Like
-   target_pid_to_str, but special cases the null process.  */
-
-static char *
-inferior_pid_to_str (int pid)
-{
-  if (pid != 0)
-    return target_pid_to_str (pid_to_ptid (pid));
-  else
-    return _("<null>");
-}
-
 /* Prints the list of inferiors and their details on UIOUT.  This is a
    version of 'info_inferior_command' suitable for use from MI.
 
-   If REQUESTED_INFERIORS is not NULL, it's a list of GDB ids of the
-   inferiors that should be printed.  Otherwise, all inferiors are
-   printed.  */
-
-static void
-print_inferior (struct ui_out *uiout, char *requested_inferiors)
+   If REQUESTED_INFERIOR is not -1, it's the GDB id of the inferior that
+   should be printed.  Otherwise, all inferiors are printed.  */
+void
+print_inferior (struct ui_out *uiout, int requested_inferior)
 {
   struct inferior *inf;
   struct cleanup *old_chain;
@@ -548,7 +532,7 @@ print_inferior (struct ui_out *uiout, char *requested_inferiors)
   /* Compute number of inferiors we will print.  */
   for (inf = inferior_list; inf; inf = inf->next)
     {
-      if (!number_is_in_list (requested_inferiors, inf->num))
+      if (requested_inferior != -1 && inf->num != requested_inferior)
 	continue;
 
       ++inf_count;
@@ -572,7 +556,7 @@ print_inferior (struct ui_out *uiout, char *requested_inferiors)
     {
       struct cleanup *chain2;
 
-      if (!number_is_in_list (requested_inferiors, inf->num))
+      if (requested_inferior != -1 && inf->num != requested_inferior)
 	continue;
 
       chain2 = make_cleanup_ui_out_tuple_begin_end (uiout, NULL);
@@ -584,8 +568,11 @@ print_inferior (struct ui_out *uiout, char *requested_inferiors)
 
       ui_out_field_int (uiout, "number", inf->num);
 
-      ui_out_field_string (uiout, "target-id",
-			   inferior_pid_to_str (inf->pid));
+      if (inf->pid)
+	ui_out_field_string (uiout, "target-id",
+			     target_pid_to_str (pid_to_ptid (inf->pid)));
+      else
+	ui_out_field_string (uiout, "target-id", "<null>");
 
       if (inf->pspace->ebfd)
 	ui_out_field_string (uiout, "exec",
@@ -619,35 +606,24 @@ detach_inferior_command (char *args, int from_tty)
 {
   int num, pid;
   struct thread_info *tp;
-  struct get_number_or_range_state state;
 
   if (!args || !*args)
-    error (_("Requires argument (inferior id(s) to detach)"));
+    error (_("Requires argument (inferior id to detach)"));
 
-  init_number_or_range (&state, args);
-  while (!state.finished)
-    {
-      num = get_number_or_range (&state);
+  num = parse_and_eval_long (args);
 
-      if (!valid_gdb_inferior_id (num))
-	{
-	  warning (_("Inferior ID %d not known."), num);
-	  continue;
-	}
+  if (!valid_gdb_inferior_id (num))
+    error (_("Inferior ID %d not known."), num);
 
-      pid = gdb_inferior_id_to_pid (num);
+  pid = gdb_inferior_id_to_pid (num);
 
-      tp = any_thread_of_process (pid);
-      if (!tp)
-	{
-	  warning (_("Inferior ID %d has no threads."), num);
-	  continue;
-	}
+  tp = any_thread_of_process (pid);
+  if (!tp)
+    error (_("Inferior has no threads."));
 
-      switch_to_thread (tp->ptid);
+  switch_to_thread (tp->ptid);
 
-      detach_command (NULL, from_tty);
-    }
+  detach_command (NULL, from_tty);
 }
 
 static void
@@ -655,35 +631,24 @@ kill_inferior_command (char *args, int from_tty)
 {
   int num, pid;
   struct thread_info *tp;
-  struct get_number_or_range_state state;
 
   if (!args || !*args)
-    error (_("Requires argument (inferior id(s) to kill)"));
+    error (_("Requires argument (inferior id to kill)"));
 
-  init_number_or_range (&state, args);
-  while (!state.finished)
-    {
-      num = get_number_or_range (&state);
+  num = parse_and_eval_long (args);
 
-      if (!valid_gdb_inferior_id (num))
-	{
-	  warning (_("Inferior ID %d not known."), num);
-	  continue;
-	}
+  if (!valid_gdb_inferior_id (num))
+    error (_("Inferior ID %d not known."), num);
 
-      pid = gdb_inferior_id_to_pid (num);
+  pid = gdb_inferior_id_to_pid (num);
 
-      tp = any_thread_of_process (pid);
-      if (!tp)
-	{
-	  warning (_("Inferior ID %d has no threads."), num);
-	  continue;
-	}
+  tp = any_thread_of_process (pid);
+  if (!tp)
+    error (_("Inferior has no threads."));
 
-      switch_to_thread (tp->ptid);
+  switch_to_thread (tp->ptid);
 
-      target_kill ();
-    }
+  target_kill ();
 
   bfd_cache_close_all ();
 }
@@ -702,7 +667,7 @@ inferior_command (char *args, int from_tty)
 
   printf_filtered (_("[Switching to inferior %d [%s] (%s)]\n"),
 		   inf->num,
-		   inferior_pid_to_str (inf->pid),
+		   target_pid_to_str (pid_to_ptid (inf->pid)),
 		   (inf->pspace->ebfd
 		    ? bfd_get_filename (inf->pspace->ebfd)
 		    : _("<noexec>")));
@@ -735,10 +700,10 @@ inferior_command (char *args, int from_tty)
     }
 
   if (inf->pid != 0 && is_running (inferior_ptid))
-    ui_out_text (current_uiout, "(running)\n");
+    ui_out_text (uiout, "(running)\n");
   else if (inf->pid != 0)
     {
-      ui_out_text (current_uiout, "\n");
+      ui_out_text (uiout, "\n");
       print_stack_frame (get_selected_frame (NULL), 1, SRC_AND_LOC);
     }
 }
@@ -748,47 +713,39 @@ inferior_command (char *args, int from_tty)
 static void
 info_inferiors_command (char *args, int from_tty)
 {
-  print_inferior (current_uiout, args);
+  int requested = -1;
+
+  if (args && *args)
+    {
+      requested = parse_and_eval_long (args);
+      if (!valid_gdb_inferior_id (requested))
+	error (_("Inferior ID %d not known."), requested);
+    }
+
+  print_inferior (uiout, requested);
 }
 
 /* remove-inferior ID */
 
-static void
+void
 remove_inferior_command (char *args, int from_tty)
 {
   int num;
   struct inferior *inf;
-  struct get_number_or_range_state state;
 
-  if (args == NULL || *args == '\0')
-    error (_("Requires an argument (inferior id(s) to remove)"));
+  num = parse_and_eval_long (args);
+  inf = find_inferior_id (num);
 
-  init_number_or_range (&state, args);
-  while (!state.finished)
-    {
-      num = get_number_or_range (&state);
-      inf = find_inferior_id (num);
+  if (inf == NULL)
+    error (_("Inferior ID %d not known."), num);
 
-      if (inf == NULL)
-	{
-	  warning (_("Inferior ID %d not known."), num);
-	  continue;
-	}
-
-      if (inf == current_inferior ())
-	{
-	  warning (_("Can not remove current symbol inferior %d."), num);
-	  continue;
-	}
+  if (inf == current_inferior ())
+    error (_("Can not remove current symbol inferior."));
     
-      if (inf->pid != 0)
-	{
-	  warning (_("Can not remove active inferior %d."), num);
-	  continue;
-	}
+  if (inf->pid != 0)
+    error (_("Can not remove an active inferior."));
 
-      delete_inferior_1 (inf, 1);
-    }
+  delete_inferior_1 (inf, 1);
 }
 
 struct inferior *
@@ -797,7 +754,6 @@ add_inferior_with_spaces (void)
   struct address_space *aspace;
   struct program_space *pspace;
   struct inferior *inf;
-  struct gdbarch_info info;
 
   /* If all inferiors share an address space on this system, this
      doesn't really return a new address space; otherwise, it
@@ -808,20 +764,12 @@ add_inferior_with_spaces (void)
   inf->pspace = pspace;
   inf->aspace = pspace->aspace;
 
-  /* Setup the inferior's initial arch, based on information obtained
-     from the global "set ..." options.  */
-  gdbarch_info_init (&info);
-  inf->gdbarch = gdbarch_find_by_info (info);
-  /* The "set ..." options reject invalid settings, so we should
-     always have a valid arch by now.  */
-  gdb_assert (inf->gdbarch != NULL);
-
   return inf;
 }
 
 /* add-inferior [-copies N] [-exec FILENAME]  */
 
-static void
+void
 add_inferior_command (char *args, int from_tty)
 {
   int i, copies = 1;
@@ -869,7 +817,7 @@ add_inferior_command (char *args, int from_tty)
       if (exec != NULL)
 	{
 	  /* Switch over temporarily, while reading executable and
-	     symbols.q.  */
+	     symbols.q  */
 	  set_current_program_space (inf->pspace);
 	  set_current_inferior (inf);
 	  switch_to_thread (null_ptid);
@@ -884,7 +832,7 @@ add_inferior_command (char *args, int from_tty)
 
 /* clone-inferior [-copies N] [ID] */
 
-static void
+void
 clone_inferior_command (char *args, int from_tty)
 {
   int i, copies = 1;
@@ -954,12 +902,6 @@ clone_inferior_command (char *args, int from_tty)
       inf = add_inferior (0);
       inf->pspace = pspace;
       inf->aspace = pspace->aspace;
-      inf->gdbarch = orginf->gdbarch;
-
-      /* If the original inferior had a user specified target
-	 description, make the clone use it too.  */
-      if (target_desc_info_from_user_p (inf->tdesc_info))
-	copy_inferior_target_desc_info (inf, orginf);
 
       printf_filtered (_("Added inferior %d.\n"), inf->num);
 
@@ -981,11 +923,108 @@ show_print_inferior_events (struct ui_file *file, int from_tty,
 
 
 
+/* Keep a registry of per-inferior data-pointers required by other GDB
+   modules.  */
+
+struct inferior_data
+{
+  unsigned index;
+  void (*cleanup) (struct inferior *, void *);
+};
+
+struct inferior_data_registration
+{
+  struct inferior_data *data;
+  struct inferior_data_registration *next;
+};
+
+struct inferior_data_registry
+{
+  struct inferior_data_registration *registrations;
+  unsigned num_registrations;
+};
+
+static struct inferior_data_registry inferior_data_registry
+  = { NULL, 0 };
+
+const struct inferior_data *
+register_inferior_data_with_cleanup
+  (void (*cleanup) (struct inferior *, void *))
+{
+  struct inferior_data_registration **curr;
+
+  /* Append new registration.  */
+  for (curr = &inferior_data_registry.registrations;
+       *curr != NULL; curr = &(*curr)->next);
+
+  *curr = XMALLOC (struct inferior_data_registration);
+  (*curr)->next = NULL;
+  (*curr)->data = XMALLOC (struct inferior_data);
+  (*curr)->data->index = inferior_data_registry.num_registrations++;
+  (*curr)->data->cleanup = cleanup;
+
+  return (*curr)->data;
+}
+
+const struct inferior_data *
+register_inferior_data (void)
+{
+  return register_inferior_data_with_cleanup (NULL);
+}
+
+static void
+inferior_alloc_data (struct inferior *inf)
+{
+  gdb_assert (inf->data == NULL);
+  inf->num_data = inferior_data_registry.num_registrations;
+  inf->data = XCALLOC (inf->num_data, void *);
+}
+
+static void
+inferior_free_data (struct inferior *inf)
+{
+  gdb_assert (inf->data != NULL);
+  clear_inferior_data (inf);
+  xfree (inf->data);
+  inf->data = NULL;
+}
+
+void
+clear_inferior_data (struct inferior *inf)
+{
+  struct inferior_data_registration *registration;
+  int i;
+
+  gdb_assert (inf->data != NULL);
+
+  for (registration = inferior_data_registry.registrations, i = 0;
+       i < inf->num_data;
+       registration = registration->next, i++)
+    if (inf->data[i] != NULL && registration->data->cleanup)
+      registration->data->cleanup (inf, inf->data[i]);
+
+  memset (inf->data, 0, inf->num_data * sizeof (void *));
+}
+
+void
+set_inferior_data (struct inferior *inf,
+		       const struct inferior_data *data,
+		       void *value)
+{
+  gdb_assert (data->index < inf->num_data);
+  inf->data[data->index] = value;
+}
+
+void *
+inferior_data (struct inferior *inf, const struct inferior_data *data)
+{
+  gdb_assert (data->index < inf->num_data);
+  return inf->data[data->index];
+}
+
 void
 initialize_inferiors (void)
 {
-  struct cmd_list_element *c = NULL;
-
   /* There's always one inferior.  Note that this function isn't an
      automatic _initialize_foo function, since other _initialize_foo
      routines may need to install their per-inferior data keys.  We
@@ -995,23 +1034,20 @@ initialize_inferiors (void)
   current_inferior_ = add_inferior (0);
   current_inferior_->pspace = current_program_space;
   current_inferior_->aspace = current_program_space->aspace;
-  /* The architecture will be initialized shortly, by
-     initialize_current_architecture.  */
 
-  add_info ("inferiors", info_inferiors_command, 
-	    _("IDs of specified inferiors (all inferiors if no argument)."));
+  add_info ("inferiors", info_inferiors_command,
+	    _("IDs of currently known inferiors."));
 
-  c = add_com ("add-inferior", no_class, add_inferior_command, _("\
+  add_com ("add-inferior", no_class, add_inferior_command, _("\
 Add a new inferior.\n\
 Usage: add-inferior [-copies <N>] [-exec <FILENAME>]\n\
-N is the optional number of inferiors to add, default is 1.\n\
+N is the optional number of inferior to add, default is 1.\n\
 FILENAME is the file name of the executable to use\n\
 as main program."));
-  set_cmd_completer (c, filename_completer);
 
-  add_com ("remove-inferiors", no_class, remove_inferior_command, _("\
-Remove inferior ID (or list of IDs).\n\
-Usage: remove-inferiors ID..."));
+  add_com ("remove-inferior", no_class, remove_inferior_command, _("\
+Remove inferior ID.\n\
+Usage: remove-inferior ID"));
 
   add_com ("clone-inferior", no_class, clone_inferior_command, _("\
 Clone inferior ID.\n\
@@ -1021,12 +1057,12 @@ executable loaded as the copied inferior.  If -copies is not specified,\n\
 adds 1 copy.  If ID is not specified, it is the current inferior\n\
 that is cloned."));
 
-  add_cmd ("inferiors", class_run, detach_inferior_command, _("\
-Detach from inferior ID (or list of IDS)."),
+  add_cmd ("inferior", class_run, detach_inferior_command, _("\
+Detach from inferior ID."),
 	   &detachlist);
 
-  add_cmd ("inferiors", class_run, kill_inferior_command, _("\
-Kill inferior ID (or list of IDs)."),
+  add_cmd ("inferior", class_run, kill_inferior_command, _("\
+Kill inferior ID."),
 	   &killlist);
 
   add_cmd ("inferior", class_run, inferior_command, _("\
